# AI_Interview_Tool

./: .gitignore  INSTALL.md  LICENSE  MODEL_LICENSES.md  PRIVACY.md  README.md  RELEASE_NOTES.md  SUPPORT.md  TERMS.md  THIRD_PARTY_NOTICES.md  interview_app.spec  pyproject.toml  requirements-dev.txt  requirements-full.txt  requirements-interactive.txt  requirements-qwen.txt  requirements.txt
ai_interviewer/: __init__.py  __main__.py  app_state.py  config.py  default_questions.py  diagnostics.py  engine.py  followup.py  gui.py  logging_setup.py  main.py  question_parser.py  release_check.py  session_store.py  stt.py  video_player.py
ai_interviewer/tts/: __init__.py  base.py  qwen_provider.py
docs/: release-checklist.md  troubleshooting.md
scripts/: build_release.ps1  download_models.ps1
tests/: test_config.py  test_default_questions.py  test_engine.py  test_followup.py  test_question_parser.py  test_session_store.py  test_stt.py  test_tts_provider.py
