[project]
name = "ai-interviewer"
version = "0.9.0b0"
description = "Offline-first Windows desktop app for AI interview practice with TTS, STT, and follow-up questions."
requires-python = ">=3.12"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.14",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
